--- a/src/main/resources/templates/nextpage.html
+++ b/src/main/resources/templates/nextpage.html
@@ -12,9 +12,9 @@
 	<h1>無事、表示されました！</h1>
 
 	<ul>
-		<li>受け取り日時：[[${orderdate}]]:Date型</li>
-		<li>受け取り時間：[[${ordertime}]]：String型</li>		
 		<li>注文曜日：[[${dayofweek}]]</li>
+		<li>セッションに保存したusernameは：[[${username}]]</li>
+		<li>セッションに保存したorderdatetimeは：[[${orderdatetime}]]</li>
 	</ul>
 
 </body>
