--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,6 +16,16 @@
 		</nav>
 	</header>
 
+	<!-- メインコンテンツ -->
+	<main layout:fragment="content">
+		<!-- ページごとに挿入されるコンテンツがここに入る -->
+	</main>
+
+	<!-- フッター -->
+	<footer>
+		<p>&copy; 2024 My Website</p>
+	</footer>
+
 </body>
 
 </html>
