--- a/src/main/resources/templates/settlement/cart.html
+++ b/src/main/resources/templates/settlement/cart.html
@@ -64,6 +64,7 @@
 						</button>
 					</form>
 					<form th:action="@{/comp}" method="post">
+						<input type="hidden" name="bn" th:value="${s.index}" />
 						<button type="submit" class="order">
 							<h3>決済</h3>
 						</button>
