--- a/src/main/resources/templates/donburi.html
+++ b/src/main/resources/templates/donburi.html
@@ -24,20 +24,21 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="katsudonS" name="katsudonSize" value="katsudonSPrice">
 							<label for="katsudonS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${katsudonSPrice} + '円'"></span>
+								<input type="radio" id="katsudonS" name="price" th:value="${katsudonSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${katsudonSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="katsudonM" name="katsudonSize" value="katsudonMPrice">
 							<label for="katsudonM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${katsudonMPrice} + '円'"></span>
+								<input type="radio" id="katsudonM" name="price" th:value="${katsudonMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${katsudonMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${katsudon}">
-							<input type="hidden" name="name" th:value="${katsudonName}">
-							<button type="submit" class="select-button">選択</button>
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${katsudon}">
+								<input type="hidden" name="name" th:value="${katsudonName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -56,20 +57,21 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="yakinikubS" name="yakinikubSize" value="yakinikubSPrice">
 							<label for="yakinikubS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${yakinikubSPrice} + '円'"></span>
+								<input type="radio" id="yakinikubS" name="price" th:value="${yakinikubSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${yakinikubSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="yakinikubM" name="yakinikubSize" value="yakinikubMPrice">
 							<label for="yakinikubM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${yakinikubMPrice} + '円'"></span>
+								<input type="radio" id="yakinikubM" name="price" th:value="${yakinikubMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${yakinikubMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${yakinikub}">
-							<input type="hidden" name="name" th:value="${yakinikubName}">
-							<button type="submit" class="select-button">選択</button>
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${yakinikub}">
+								<input type="hidden" name="name" th:value="${yakinikubName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -88,20 +90,21 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="oyakodonS" name="oyakodonSize" value="oyakodonSPrice">
 							<label for="oyakodonS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${oyakodonSPrice} + '円'"></span>
+								<input type="radio" id="oyakodonS" name="price" th:value="${oyakodonSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${oyakodonSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="oyakodonM" name="oyakodonSize" value="oyakodonMPrice">
 							<label for="oyakodonM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${oyakodonMPrice} + '円'"></span>
+								<input type="radio" id="oyakodonM" name="price" th:value="${oyakodonMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${oyakodonMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${oyakodon}">
-							<input type="hidden" name="name" th:value="${oyakodonName}">
-							<button type="submit" class="select-button">選択</button>
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${oyakodon}">
+								<input type="hidden" name="name" th:value="${oyakodonName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
