--- a/src/main/resources/static/css/cookCategory.css
+++ b/src/main/resources/static/css/cookCategory.css
@@ -119,8 +119,8 @@ body {
 	font-size: 15px;
 	color: rgb(45, 45, 45);
 	font-weight: bold;
-	
-	
+
+
 }
 
 .item-price {
@@ -131,10 +131,12 @@ body {
 	font-weight: bold;
 }
 
-.buttom-style {
+.button-style {
 	display: flex;
-	justify-content: flex-end;
-	
+	justify-content: center;
+	margin-top: 20px;
+	/* 追加: select-buttomの上に余白を追加 */
+
 }
 
 .size-wrapper input[type="radio"] {
@@ -159,14 +161,17 @@ body {
 	align-items: flex-start;
 	/* ラベルを左に寄せる */
 	position: relative;
+	margin-bottom: 20px;
 
 }
 
 .size-wrapper {
 	display: flex;
 	flex-direction: column;
-	align-items: center; /* ラジオボタンとラベルを中央揃え */
-    width: 100%;
+	align-items: center;
+	/* ラジオボタンとラベルを中央揃え */
+	width: 100%;
+	margin-bottom: 20px;
 }
 
 a {
@@ -178,7 +183,7 @@ a {
 	/* 可选：设置链接文字加粗 */
 }
 
-.select-buttom {
+.select-button {
 	background-color: #ff69b4;
 	/* 可愛いピンク色 */
 	color: white;
@@ -194,8 +199,10 @@ a {
 	/* アニメーション */
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	/* 柔らかい影 */
-	float: right;
-	
+	float: center;
+
+
+
 }
 
 .select-button:hover {
