--- a/src/main/resources/static/css/niku.css
+++ b/src/main/resources/static/css/niku.css
@@ -14,24 +14,25 @@ body {
 .menu-section h1 {
 	margin: 10;
 	font-size: 50px;
-	background-color:rgb(255, 255, 0);
+	background-color: rgb(255, 255, 0);
 	color: rgb(0, 0, 0);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.name-description{
+
+.name-description {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 25px;
 	color: rgb(0, 0, 0);
 	margin-top: 10px;
-	line-height:1.5;
+	line-height: 1.5;
 	text-align: center;
 	font-weight: bold;
 }
 
-.item-description{
-	font-family:'Quicksand',sans-serif;
+.item-description {
+	font-family: 'Quicksand', sans-serif;
 	font-size: 15px;
 	color: rgb(0, 0, 0);
 	margin-top: 10px;
@@ -78,7 +79,7 @@ body {
 .menu-section .box4 h1 {
 	margin: 0;
 	font-size: 20px;
-	background:rgb(192, 192, 192);
+	background: rgb(192, 192, 192);
 }
 
 .menu-item {
@@ -117,7 +118,7 @@ body {
 	font-size: 15px;
 	color: rgb(45, 45, 45);
 	margin: 10px;
-	line-height: 2;
+	line-height: 1.5;
 	font-weight: bold;
 }
 
@@ -125,7 +126,7 @@ body {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 15px;
 	color: rgb(255, 0, 0);
-	line-height: 2;
+	line-height: 1.5;
 	font-weight: bold;
 }
 
@@ -133,7 +134,7 @@ body {
 .size-wrapper input[type="radio"] {
 	margin-right: 2px;
 	/* ラジオボタンとラベルの間に余白を追加 */
-	
+
 }
 
 .size-wrapper label {
@@ -142,8 +143,9 @@ body {
 	margin-right: 20px;
 	/* ラジオボタンのセット間に余白を追加 */
 	font-size: 15px;
-	line-height: 1.5;
+
 }
+
 .text-wrapper {
 	width: auto;
 	background: rgb(128, 255, 128);
@@ -154,13 +156,17 @@ body {
 	/* 可选：添加圆角以匹配样式 */
 	box-shadow: 0 0 5px rgb(255, 255, 255);
 	/* 可选：添加阴影 */
+
+	margin-bottom: 10px;
 }
 
 .size-wrapper {
-	width: auto;
-	padding: 5px;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
+	/* ラジオボタンとラベルを中央揃え */
+	width: 100%;
+
 }
 
 a {
@@ -170,6 +176,14 @@ a {
 	/* 设置链接的颜色 */
 	font-weight: bold;
 	/* 可选：设置链接文字加粗 */
+}
+
+.button-style {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+	/* 追加: select-buttomの上に余白を追加 */
+
 }
 
 .select-button {
@@ -188,6 +202,7 @@ a {
 	/* アニメーション */
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	/* 柔らかい影 */
+	float: center;
 }
 
 .select-button:hover {
