--- a/src/main/resources/templates/cookCategory.html
+++ b/src/main/resources/templates/cookCategory.html
@@ -42,10 +42,10 @@
 							<span class="item-price" th:text="${osusumeMPrice} + '円'"></span>
 						</label>
 						<!-- 選択ボタン -->
-						<div class="buttom-style">
+						<div class="button-style">
 							<input type="hidden" name="image" th:value="${osusume}">
 							<input type="hidden" name="name" th:value="${osusumeName}">
-							<button type="submit" class="select-buttom">選択</button>
+							<button type="submit" class="select-button">選択</button>
 						</div>
 					</form>
 				</div>
@@ -68,21 +68,20 @@
 				<div class="size-wrapper">
 					<form th:action="@{/settlement}" method="post">
 						<label for="higawariS">
-							<input type="radio" id="higawariS" name="higawariSize" value="${higawariSPrice}">
+							<input type="radio" id="higawariS" name="price" th:value="${higawariSPrice}">
 							<span class="item-size">Sサイズ </span>
 							<span class="item-price" th:text="${higawariSPrice} + '円'"></span>
 						</label>
 						<br />
 						<label for="higawariM">
-							<input type="radio" id="higawariM" name="higawariSize" value="${higawariMPrice}">
-
+							<input type="radio" id="higawariM" name="price" th:value="${higawariMPrice}">
 							<span class="item-size">Mサイズ </span>
 							<span class="item-price" th:text="${higawariMPrice} + '円'"></span>
 						</label>
-						<div class="buttom-style">
+						<div class="button-style">
 							<input type="hidden" name="image" th:value="${higawari}">
 							<input type="hidden" name="name" th:value="${higawariName}">
-							<button type="submit" class="select-buttom">選択</button>
+							<button type="submit" class="select-button">選択</button>
 						</div>
 					</form>
 				</div>
@@ -105,21 +104,20 @@
 				<div class="size-wrapper">
 					<form th:action="@{/settlement}" method="post">
 						<label for="omakaseS">
-							<input type="radio" id="omakaseS" name="omakaseSize" value="omakaseSPrice">
+							<input type="radio" id="omakaseS" name="price" th:value="${omakaseSPrice}">
 							<span class="item-size">Sサイズ </span>
 							<span class="item-price" th:text="${omakaseSPrice} + '円'"></span>
 						</label>
 						<br />
 						<label for="omakaseM">
-							<input type="radio" id="omakaseM" name="omakaseSize" value="omakaseMPrice">
-
+							<input type="radio" id="omakaseM" name="price" th:value="${omakaseMPrice}">
 							<span class="item-size">Mサイズ </span>
 							<span class="item-price" th:text="${omakaseMPrice} + '円'"></span>
 						</label>
-						<div class="buttom-style">
+						<div class="button-style">
 							<input type="hidden" name="image" th:value="${omakase}">
 							<input type="hidden" name="name" th:value="${omakaseName}">
-							<button type="submit" class="select-buttom">選択</button>
+							<button type="submit" class="select-button">選択</button>
 						</div>
 					</form>
 				</div>
