--- a/src/main/resources/templates/niku.html
+++ b/src/main/resources/templates/niku.html
@@ -24,20 +24,22 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="hamburgerS" name="hamburgerSize" value="${hamburgerSPrice}">
 							<label for="hamburgerS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${hamburgerSPrice} + '円'"></span>
+								<input type="radio" id="hamburgerS" name="price" th:value="${hamburgerSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${hamburgerSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="hamburgerM" name="hamburgerSize" value="${hamburgerMPrice}">
 							<label for="hamburgerM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${hamburgerMPrice} + '円'"></span>
+								<input type="radio" id="hamburgerM" name="price" th:value="${hamburgerMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${hamburgerMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${hamburger}">
-							<input type="hidden" name="name" th:value="${hamburgerName}">
-							<button type="submit" class="select-button">選択</button>
+							
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${hamburger}">
+								<input type="hidden" name="name" th:value="${hamburgerName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -56,20 +58,22 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="yakinikuS" name="yakinikuSize" value="yakinikuSPrice">
 							<label for="yakinikuS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${yakinikuSPrice} + '円'"></span>
+								<input type="radio" id="yakinikuS" name="price" th:value="${yakinikuSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${yakinikuSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="yakinikuM" name="yakinikuSize" value="yakinikuMPrice">
 							<label for="yakinikuM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${yakinikuMPrice} + '円'"></span>
+								<input type="radio" id="yakinikuM" name="price" th:value="${yakinikuMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${yakinikuMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${yakiniku}">
-							<input type="hidden" name="name" th:value="${yakinikuName}">
-							<button type="submit" class="select-button">選択</button>
+						
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${yakiniku}">
+								<input type="hidden" name="name" th:value="${yakinikuName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -88,20 +92,22 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="chickenS" name="chickenSize" value="chickenSPrice">
 							<label for="chickenS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${chickenSPrice} + '円'"></span>
+								<input type="radio" id="chickenS" name="price" th:value="${chickenSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${chickenSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="chickenM" name="chickenSize" value="chickenMPrice">
 							<label for="chickenM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${chickenMPrice} + '円'"></span>
+								<input type="radio" id="chickenM" name="price" th:value="${chickenMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${chickenMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${chicken}">
-							<input type="hidden" name="name" th:value="${chickenName}">
-							<button type="submit" class="select-button">選択</button>
+						
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${chicken}">
+								<input type="hidden" name="name" th:value="${chickenName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
