--- a/src/main/resources/templates/sakana.html
+++ b/src/main/resources/templates/sakana.html
@@ -24,20 +24,22 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="omakaseS" name="omakaseSize" value="omakaseSPrice">
 							<label for="omakaseS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${omakaseSPrice} + '円'"></span>
+								<input type="radio" id="omakaseS" name="price" th:value="${omakaseSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${omakaseSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="omakaseM" name="omakaseSize" value="omakaseMPrice">
+
 							<label for="omakaseM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${omakaseMPrice} + '円'"></span>
+								<input type="radio" id="omakaseM" name="price" th:value="${omakaseMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${omakaseMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${omakase}">
-							<input type="hidden" name="name" th:value="${omakaseName}">
-							<button type="submit" class="select-button">選択</button>
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${omakase}">
+								<input type="hidden" name="name" th:value="${omakaseName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -56,20 +58,22 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="syakeS" name="syakeSize" value="syakeSPrice">
 							<label for="syakeS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${syakeSPrice} + '円'"></span>
+								<input type="radio" id="syakeS" name="price" th:value="${syakeSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${syakeSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="syakeM" name="syakeSize" value="syakeMPrice">
+
 							<label for="syakeM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${syakeMPrice} + '円'"></span>
+								<input type="radio" id="syakeM" name="price" th:value="${syakeMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${syakeMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${syake}">
-							<input type="hidden" name="name" th:value="${syakeName}">
-							<button type="submit" class="select-button">選択</button>
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${syake}">
+								<input type="hidden" name="name" th:value="${syakeName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -88,20 +92,22 @@
 					</div>
 					<div class="size-wrapper">
 						<form th:action="@{/settlement}" method="post">
-							<input type="radio" id="sabaS" name="sabaSize" value="sabaSPrice">
 							<label for="sabaS">
-								<span class="item-size">Sサイズ </span><span class="item-price"
-									th:text="${sabaSPrice} + '円'"></span>
+								<input type="radio" id="sabaS" name="price" th:value="${sabaSPrice}">
+								<span class="item-size">Sサイズ </span>
+								<span class="item-price" th:text="${sabaSPrice} + '円'"></span>
 							</label>
-							<br />
-							<input type="radio" id="sabaM" name="sabaSize" value="sabaMPrice">
+
 							<label for="sabaM">
-								<span class="item-size">Mサイズ </span><span class="item-price"
-									th:text="${sabaMPrice} + '円'"></span>
+								<input type="radio" id="sabaM" name="price" th:value="${sabaMPrice}">
+								<span class="item-size">Mサイズ </span>
+								<span class="item-price" th:text="${sabaMPrice} + '円'"></span>
 							</label>
-							<input type="hidden" name="image" th:value="${saba}">
-							<input type="hidden" name="name" th:value="${sabaName}">
-							<button type="submit" class="select-button">選択</button>
+							<div class="button-style">
+								<input type="hidden" name="image" th:value="${saba}">
+								<input type="hidden" name="name" th:value="${sabaName}">
+								<button type="submit" class="select-button">選択</button>
+							</div>
 						</form>
 					</div>
 				</div>
