--- a/src/main/resources/templates/settlement/cart.html
+++ b/src/main/resources/templates/settlement/cart.html
@@ -20,12 +20,11 @@
 	<div th:each="obj,s:${dtoList}" class="container">
 
 		<section id="cart">
-			<article class="product">
+			<arti class="product">
 				<header>
-					<!--							<img th:src="'data:image/png;base64,'+${obj.image}" alt="店名">-->
-					<img
-						src="https://1.bp.blogspot.com/-PjZz2WJ1Zj0/VMIvCILIJzI/AAAAAAAAq2w/bmdFdi5l4Z4/s800/fish_neontetra.png">
-
+					<img th:src="'data:image/png;base64,'+${obj.image}" alt="店名">
+<!--					<img-->
+<!--						src="https://1.bp.blogspot.com/-PjZz2WJ1Zj0/VMIvCILIJzI/AAAAAAAAq2w/bmdFdi5l4Z4/s800/fish_neontetra.png">-->
 				</header>
 
 				<div class="content">
@@ -71,12 +70,12 @@
 					</form>
 				</div>
 
-				</arti>
+				</article>
 
 		</section>
 
 	</div>
-	<div class="empty" 	th:if="${#lists.isEmpty(list)}">
+	<div class="empty" 	th:if="${#lists.isEmpty(dtoList)}">
 		<p>カートに商品がありません</p>
 	</div>
 </body>
