[若松]調整中、。

--- a/src/main/resources/templates/commons/layout.html
+++ b/src/main/resources/templates/commons/layout.html
@@ -9,15 +9,20 @@
 			<img src="/image/benpura.png" alt="Extra Image" class="extra-image">
 			弁プラ
 		</b>
-
-		<a href="/login">
+		
+		<!--a href="/ボーデンさんのhtml名">-->
+		<a href="/nextpagelogin">
 			<img src="/image/login.png" alt="Sample Image">
 			ログイン
 		</a>
-		<a href="/calender2">
+		
+		<!--a href="/若松さんのhtml名">-->
+		<a href="/calender">
 			<img src="/image/mypage.png" alt="Sample Image">
 			マイページ
 		</a>
+		
+		<!--a href="/川口さんのhtml名">-->
 		<a href="/cart">
 			<img src="/image/cart.png" alt="Sample Image">
 			カート
