--- a/src/main/resources/templates/nextpagelogin.html
+++ b/src/main/resources/templates/nextpagelogin.html
@@ -15,7 +15,7 @@
 
 <body>
 	<h1>仮のログイン画面です。</h1>
-	<form th:action="@{/calender2}" method="get">
+	<form th:action="@{/calender}" method="get">
 		<table>
 			<tr>
 				<th>username</th>
